--- a/e2e-testing/docker-compose-e2e-test.yml
+++ b/e2e-testing/docker-compose-e2e-test.yml
@@ -43,7 +43,7 @@ services:
     image: redis:5.0.6-alpine
     ports:
       - 6382:6379
-  dydxprotocold0:
+  nemod0:
     image: local:e2etest-dydxprotocol
     entrypoint:
       - cosmovisor
@@ -56,7 +56,7 @@ services:
       - --home
       - /dydxprotocol/chain/.alice
       - --p2p.persistent_peers 
-      - "17e5e45691f0d01449c84fd4ae87279578cdd7ec@dydxprotocold0:26656,47539956aaa8e624e0f1d926040e54908ad0eb44@dydxprotocold2:26656,5882428984d83b03d0c907c1f0af343534987052@dydxprotocold3:26656"
+      - "17e5e45691f0d01449c84fd4ae87279578cdd7ec@nemod0:26656,47539956aaa8e624e0f1d926040e54908ad0eb44@nemod2:26656,5882428984d83b03d0c907c1f0af343534987052@nemod3:26656"
       - --bridge-daemon-eth-rpc-endpoint
       - "${ETH_RPC_ENDPOINT}"
     environment:
@@ -70,7 +70,7 @@ services:
   
   # This is the Indexer connected node.
   # TODO: remove stake and make this a full node.
-  dydxprotocold1:
+  nemod1:
     image: local:e2etest-dydxprotocol
     entrypoint:
        - cosmovisor
@@ -81,7 +81,7 @@ services:
        - --home
        - /dydxprotocol/chain/.bob
        - --p2p.persistent_peers 
-       - "17e5e45691f0d01449c84fd4ae87279578cdd7ec@dydxprotocold0:26656,b69182310be02559483e42c77b7b104352713166@dydxprotocold1:26656,47539956aaa8e624e0f1d926040e54908ad0eb44@dydxprotocold2:26656,5882428984d83b03d0c907c1f0af343534987052@dydxprotocold3:26656"
+       - "17e5e45691f0d01449c84fd4ae87279578cdd7ec@nemod0:26656,b69182310be02559483e42c77b7b104352713166@nemod1:26656,47539956aaa8e624e0f1d926040e54908ad0eb44@nemod2:26656,5882428984d83b03d0c907c1f0af343534987052@nemod3:26656"
        - --non-validating-full-node=true
        - --bridge-daemon-eth-rpc-endpoint
        - "${ETH_RPC_ENDPOINT}"
@@ -97,7 +97,7 @@ services:
       kafka:
         condition: service_healthy
  
-  dydxprotocold2:
+  nemod2:
     image: local:e2etest-dydxprotocol
     entrypoint:
        - cosmovisor
@@ -108,7 +108,7 @@ services:
        - --home
        - /dydxprotocol/chain/.carl
        - --p2p.persistent_peers
-       - "17e5e45691f0d01449c84fd4ae87279578cdd7ec@dydxprotocold0:26656,47539956aaa8e624e0f1d926040e54908ad0eb44@dydxprotocold2:26656,5882428984d83b03d0c907c1f0af343534987052@dydxprotocold3:26656"
+       - "17e5e45691f0d01449c84fd4ae87279578cdd7ec@nemod0:26656,47539956aaa8e624e0f1d926040e54908ad0eb44@nemod2:26656,5882428984d83b03d0c907c1f0af343534987052@nemod3:26656"
        - --bridge-daemon-eth-rpc-endpoint
        - "${ETH_RPC_ENDPOINT}"
     environment:
@@ -116,7 +116,7 @@ services:
     volumes:
       - ../protocol/localnet/dydxprotocol2:/dydxprotocol/chain/.carl/data
   
-  dydxprotocold3:
+  nemod3:
     image: local:e2etest-dydxprotocol
     entrypoint:
        - cosmovisor
@@ -127,7 +127,7 @@ services:
        - --home
        - /dydxprotocol/chain/.dave
        - --p2p.persistent_peers 
-       - "17e5e45691f0d01449c84fd4ae87279578cdd7ec@dydxprotocold0:26656,47539956aaa8e624e0f1d926040e54908ad0eb44@dydxprotocold2:26656,5882428984d83b03d0c907c1f0af343534987052@dydxprotocold3:26656"
+       - "17e5e45691f0d01449c84fd4ae87279578cdd7ec@nemod0:26656,47539956aaa8e624e0f1d926040e54908ad0eb44@nemod2:26656,5882428984d83b03d0c907c1f0af343534987052@nemod3:26656"
        - --bridge-daemon-eth-rpc-endpoint
        - "${ETH_RPC_ENDPOINT}"
     environment:
