--- a/indexer/docker-compose-local-deployment.yml
+++ b/indexer/docker-compose-local-deployment.yml
@@ -34,11 +34,11 @@ services:
     ports:
       - 5435:5432
     environment:
-      POSTGRES_PASSWORD: dydxserver123
-      POSTGRES_USER: dydx_dev
-      DATADOG_POSTGRES_PASSWORD: dydxserver123
+      POSTGRES_PASSWORD: nemoserver123
+      POSTGRES_USER: nemo_dev
+      DATADOG_POSTGRES_PASSWORD: nemoserver123
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U dydx_dev"]
+      test: ["CMD-SHELL", "pg_isready -U nemo_dev"]
       interval: 5s
       timeout: 20s
       retries: 10
@@ -46,7 +46,7 @@ services:
       com.datadoghq.ad.logs: '[{"source": "indexer", "service": "postgres"}]'
       com.datadoghq.ad.check_names: '["postgres"]'
       com.datadoghq.ad.init_configs: '[{}]'
-      com.datadoghq.ad.instances: '[{"host":"%%host%%", "port":5432,"username":"datadog","password":"dydxserver123"}]'
+      com.datadoghq.ad.instances: '[{"host":"%%host%%", "port":5432,"username":"datadog","password":"nemoserver123"}]'
   redis:
     image: redis:5.0.6-alpine
     ports:
