--- a/indexer/packages/base/package.json
+++ b/indexer/packages/base/package.json
@@ -9,6 +9,7 @@
     "@types/express": "^4.17.13",
     "@types/lodash": "^4.14.182",
     "@types/traverse": "^0.6.32",
+    "@types/uuid": "^8.3.4",
     "express": "^4.18.1",
     "jest": "^28.1.2",
     "typescript": "^4.7.4"
@@ -32,6 +33,10 @@
   },
   "homepage": "https://github.com/nemo-network/indexer#readme",
   "dependencies": {
+    "@bugsnag/core": "^7.18.0",
+    "@bugsnag/js": "^7.18.0",
+    "@bugsnag/node": "^7.18.0",
+    "@bugsnag/plugin-express": "^7.18.0",
     "axios": "^1.2.1",
     "big.js": "^6.2.1",
     "bignumber.js": "^9.0.2",
@@ -41,10 +46,6 @@
     "traverse": "^0.6.6",
     "uuid": "^8.3.2",
     "winston": "^3.8.1",
-    "winston-transport": "^4.5.0",
-    "@bugsnag/core": "^7.18.0",
-    "@bugsnag/js": "^7.18.0",
-    "@bugsnag/node": "^7.18.0",
-    "@bugsnag/plugin-express": "^7.18.0"
+    "winston-transport": "^4.5.0"
   }
 }
