--- a/indexer/packages/base/package.json
+++ b/indexer/packages/base/package.json
@@ -4,15 +4,16 @@
   "description": "",
   "main": "build/src/index.js",
   "devDependencies": {
-    "@nemo-network-indexer/dev": "workspace:^0.0.1",
-    "@types/big.js": "^6.1.5",
-    "@types/express": "^4.17.13",
-    "@types/lodash": "^4.14.182",
-    "@types/traverse": "^0.6.32",
+    "@nemo-network-indexer/dev": "workspace:^",
+    "@types/big.js": "^6.2.2",
+    "@types/express": "^4.17.21",
+    "@types/lodash": "^4.17.7",
+    "@types/node": "^22.5.4",
+    "@types/traverse": "^0.6.37",
     "@types/uuid": "^8.3.4",
-    "express": "^4.18.1",
-    "jest": "^28.1.2",
-    "typescript": "^4.7.4"
+    "express": "^4.21.0",
+    "jest": "^28.1.3",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "lint": "eslint --ext .ts,.js .",
@@ -33,19 +34,19 @@
   },
   "homepage": "https://github.com/nemo-network/indexer#readme",
   "dependencies": {
-    "@bugsnag/core": "^7.18.0",
-    "@bugsnag/js": "^7.18.0",
-    "@bugsnag/node": "^7.18.0",
-    "@bugsnag/plugin-express": "^7.18.0",
-    "axios": "^1.2.1",
-    "big.js": "^6.2.1",
-    "bignumber.js": "^9.0.2",
-    "dotenv-flow": "^3.2.0",
-    "hot-shots": "^9.1.0",
+    "@bugsnag/core": "^7.25.0",
+    "@bugsnag/js": "^7.25.0",
+    "@bugsnag/node": "^7.25.0",
+    "@bugsnag/plugin-express": "^7.25.0",
+    "axios": "^1.7.7",
+    "big.js": "^6.2.2",
+    "bignumber.js": "^9.1.2",
+    "dotenv-flow": "^3.3.0",
+    "hot-shots": "^9.3.0",
     "lodash": "^4.17.21",
-    "traverse": "^0.6.6",
+    "traverse": "^0.6.10",
     "uuid": "^8.3.2",
-    "winston": "^3.8.1",
-    "winston-transport": "^4.5.0"
+    "winston": "^3.14.2",
+    "winston-transport": "^4.7.1"
   }
 }
