--- a/indexer/packages/example-package/package.json
+++ b/indexer/packages/example-package/package.json
@@ -5,6 +5,7 @@
   "main": "build/index.js",
   "devDependencies": {
     "@nemo-network-indexer/dev": "workspace:^0.0.1",
+    "@types/node": "^22.5.4",
     "typescript": "^4.7.4"
   },
   "scripts": {
