--- a/indexer/packages/v4-protos/package.json
+++ b/indexer/packages/v4-protos/package.json
@@ -8,6 +8,7 @@
     "@osmonauts/telescope": "0.80.0",
     "@protobufs/cosmos": "^0.0.11",
     "@protobufs/gogoproto": "^0.0.10",
+    "@types/node": "^22.5.4",
     "typescript": "^4.7.4"
   },
   "scripts": {
@@ -15,7 +16,7 @@
     "lint:fix": "eslint --ext .ts,.js . --fix",
     "build": "pnpm run build:verify-proto && rm -rf build/ && tsc",
     "build:prod": "rm -rf build/ && tsc",
-    "build:watch": "pnpm run build -- --watch",
+    "build:watch": "pnpm run build --watch",
     "test": "echo \"Error: no test specified\"",
     "build:proto": "(cd ../../.. && make proto-export) && rm -rf src/codegen && telescope transpile --protoDirs ../../../.proto-export --outPath ./src/codegen --no-includeAminos --includeLCDClients --includeRPCClients",
     "build:verify-proto": "pnpm run build:proto && git diff --exit-code src/codegen"
