--- a/indexer/services/auxo/package.json
+++ b/indexer/services/auxo/package.json
@@ -16,27 +16,27 @@
   "author": "",
   "license": "AGPL-3.0",
   "dependencies": {
-    "@aws-sdk/client-ecr": "^3.354.0",
-    "@aws-sdk/client-ecs": "^3.353.0",
-    "@aws-sdk/client-lambda": "^3.353.0",
-    "@nemo-network-indexer/base": "workspace:^0.0.1",
-    "dotenv-flow": "^3.2.0",
+    "@aws-sdk/client-ecr": "^3.650.0",
+    "@aws-sdk/client-ecs": "^3.650.0",
+    "@aws-sdk/client-lambda": "^3.650.0",
+    "dotenv-flow": "^3.3.0",
     "kafkajs": "^2.2.4",
     "lodash": "^4.17.21",
     "redis": "2.8.0"
   },
   "devDependencies": {
-    "@nemo-network-indexer/dev": "workspace:^0.0.1",
-    "@types/aws-lambda": "^8.10.108",
-    "@types/jest": "^28.1.4",
-    "@types/lodash": "^4.14.182",
-    "@types/node": "^18.0.3",
+    "@nemo-network-indexer/base": "workspace:^",
+    "@nemo-network-indexer/dev": "workspace:^",
+    "@types/aws-lambda": "^8.10.145",
+    "@types/jest": "^28.1.8",
+    "@types/lodash": "^4.17.7",
+    "@types/node": "^18.19.50",
     "@types/redis": "2.8.27",
-    "esbuild": "^0.15.11",
-    "jest": "^28.1.2",
-    "ts-node": "^10.8.2",
-    "tsconfig-paths": "^4.0.0",
-    "typescript": "^4.7.4"
+    "esbuild": "^0.15.18",
+    "jest": "^28.1.3",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^4.9.5"
   },
   "repository": {
     "type": "git",
