--- a/indexer/Dockerfile.service.local
+++ b/indexer/Dockerfile.service.local
@@ -3,7 +3,7 @@ FROM dydxprotocol/indexer-node:16-alpine-m1
 ENV NODE_ENV=development
 ARG service
 
-RUN apk add --no-cache bash jq aws-cli
+# RUN apk add --no-cache bash jq aws-cli
 RUN adduser -S dydx
 RUN mkdir -p /home/dydx/app
 RUN chown dydx -R /home/dydx/app
