--- a/indexer/Dockerfile.service.local
+++ b/indexer/Dockerfile.service.local
@@ -1,10 +1,14 @@
 # Dockerfile to containerize services locally
-FROM dydxprotocol/indexer-node:16-alpine-m1
+FROM node:18-alpine
 ENV NODE_ENV=development
+ENV PNPM_HOME="/pnpm"
+ENV PATH="$PNPM_HOME:$PATH"
 ARG service
 
-# RUN apk add --no-cache bash jq aws-cli
-RUN apk add --no-cache bash jq
+RUN corepack enable
+
+RUN apk add --no-cache bash jq aws-cli
+# RUN apk add --no-cache bash jq
 RUN adduser -S dydx
 RUN mkdir -p /home/dydx/app
 RUN chown dydx -R /home/dydx/app
@@ -46,6 +50,7 @@ COPY ./scripts/container-run.sh /home/dydx/app/services/$service/scripts/
 RUN chown dydx -R /home/dydx/app
 
 USER dydx
+# RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
 RUN pnpm i --loglevel warn --production --frozen-lockfile --unsafe-perm
 
 WORKDIR /home/dydx/app/services/$service
