--- a/indexer/packages/redis/package.json
+++ b/indexer/packages/redis/package.json
@@ -2,7 +2,7 @@
   "name": "@nemo-network-indexer/redis",
   "version": "0.0.1",
   "description": "",
-  "main": "build/src/index.js",
+  "main": "build/redis/src/index.js",
   "devDependencies": {
     "@nemo-network-indexer/dev": "workspace:^0.0.1",
     "@types/big.js": "^6.1.5",
@@ -18,7 +18,7 @@
   "scripts": {
     "lint": "eslint --ext .ts,.js .",
     "lint:fix": "eslint --ext .ts,.js . --fix",
-    "build": "rm -rf build/ && tsc && mkdir build/src && cp -r src/scripts build/src/scripts",
+    "build": "rm -rf build/ && tsc && cp -r src/scripts build/redis/src/scripts",
     "build:prod": "pnpm run build",
     "build:watch": "pnpm run build -- --watch",
     "test": "NODE_ENV=test jest --runInBand --forceExit"
