--- a/indexer/docker-compose-local-deployment.yml
+++ b/indexer/docker-compose-local-deployment.yml
@@ -1,32 +1,32 @@
 version: '3'
 services:
-  # kafka:
-  #   image: blacktop/kafka:2.6
-  #   ports:
-  #     - 9092:9092
-  #   environment:
-  #     KAFKA_ADVERTISED_HOST_NAME: kafka
-  #     KAFKA_CREATE_TOPICS:
-  #       "to-ender:1:1,\
-  #       to-vulcan:1:1,\
-  #       to-websockets-orderbooks:1:1,\
-  #       to-websockets-subaccounts:1:1,\
-  #       to-websockets-trades:1:1,\
-  #       to-websockets-markets:1:1,\
-  #       to-websockets-candles:1:1,\
-  #       to-websockets-block-height:1:1"
-  #     KAFKA_LISTENERS: INTERNAL://:9092,EXTERNAL_SAME_HOST://:29092
-  #     KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:9092,EXTERNAL_SAME_HOST://localhost:29092
-  #     KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL_SAME_HOST:PLAINTEXT
-  #     KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-  #     DD_AGENT_HOST: datadog-agent
-  #   healthcheck:
-  #     test: ["CMD-SHELL", "kafka-topics.sh --bootstrap-server 127.0.0.1:9092 --topic to-websockets-candles --describe"]
-  #     interval: 5s
-  #     timeout: 20s
-  #     retries: 50
-  #   labels:
-  #     com.datadoghq.ad.logs: '[{"source": "indexer", "service": "kafka"}]'
+  kafka:
+    image: blacktop/kafka:2.6
+    ports:
+      - 9092:9092
+    environment:
+      KAFKA_ADVERTISED_HOST_NAME: kafka
+      KAFKA_CREATE_TOPICS:
+        "to-ender:1:1,\
+        to-vulcan:1:1,\
+        to-websockets-orderbooks:1:1,\
+        to-websockets-subaccounts:1:1,\
+        to-websockets-trades:1:1,\
+        to-websockets-markets:1:1,\
+        to-websockets-candles:1:1,\
+        to-websockets-block-height:1:1"
+      KAFKA_LISTENERS: INTERNAL://:9092,EXTERNAL_SAME_HOST://:29092
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:9092,EXTERNAL_SAME_HOST://localhost:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL_SAME_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      DD_AGENT_HOST: datadog-agent
+    healthcheck:
+      test: ["CMD-SHELL", "kafka-topics.sh --bootstrap-server 127.0.0.1:9092 --topic to-websockets-candles --describe"]
+      interval: 5s
+      timeout: 20s
+      retries: 50
+    labels:
+      com.datadoghq.ad.logs: '[{"source": "indexer", "service": "kafka"}]'
   postgres:
     build:
       context: .
