debug docker compose

--- a/indexer/docker-compose-local-deployment.yml
+++ b/indexer/docker-compose-local-deployment.yml
@@ -85,30 +85,30 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-  # ender:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile.service.local
-  #     args:
-  #       service: ender
-  #   ports:
-  #     - 3001:3001
-  #   links:
-  #     - postgres
-  #   environment:
-  #     # See https://docs.datadoghq.com/profiler/enabling/nodejs/ for DD_ specific environment variables.
-  #     # Note that DD_SERVICE and DD_VERSION are read by default from package.json
-  #     - DD_PROFILING_ENABLED=true
-  #     - DD_ENV=localnet_${USER}
-  #     - DD_AGENT_HOST=datadog-agent
-  #     - REDIS_URL=redis://redis:6379
-  #   labels:
-  #     com.datadoghq.ad.logs: '[{"source": "indexer", "service": "ender"}]'
-  #   depends_on:
-  #     kafka:
-  #       condition: service_healthy
-  #     postgres-package:
-  #       condition: service_completed_successfully
+  ender:
+    build:
+      context: .
+      dockerfile: Dockerfile.service.local
+      args:
+        service: ender
+    ports:
+      - 3001:3001
+    links:
+      - postgres
+    environment:
+      # See https://docs.datadoghq.com/profiler/enabling/nodejs/ for DD_ specific environment variables.
+      # Note that DD_SERVICE and DD_VERSION are read by default from package.json
+      - DD_PROFILING_ENABLED=true
+      - DD_ENV=localnet_${USER}
+      - DD_AGENT_HOST=datadog-agent
+      - REDIS_URL=redis://redis:6379
+    labels:
+      com.datadoghq.ad.logs: '[{"source": "indexer", "service": "ender"}]'
+    depends_on:
+      kafka:
+        condition: service_healthy
+      postgres-package:
+        condition: service_completed_successfully
   comlink:
     build:
       context: .
