debug docker compose

--- a/indexer/docker-compose-local-deployment.yml
+++ b/indexer/docker-compose-local-deployment.yml
@@ -161,29 +161,29 @@ services:
         condition: service_healthy
       postgres-package:
         condition: service_completed_successfully
-  # roundtable:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile.service.local
-  #     args:
-  #       service: roundtable
-  #   ports:
-  #     - 3004:3004
-  #   links:
-  #     - postgres
-  #   environment:
-  #     # See https://docs.datadoghq.com/profiler/enabling/nodejs/ for DD_ specific environment variables.
-  #     # Note that DD_SERVICE and DD_VERSION are read by default from package.json
-  #     - DD_PROFILING_ENABLED=true
-  #     - DD_ENV=localnet_${USER}
-  #     - DD_AGENT_HOST=datadog-agent
-  #   labels:
-  #     com.datadoghq.ad.logs: '[{"source": "indexer", "service": "roundtable"}]'
-  #   depends_on:
-  #     kafka:
-  #       condition: service_healthy
-  #     postgres-package:
-  #       condition: service_completed_successfully
+  roundtable:
+    build:
+      context: .
+      dockerfile: Dockerfile.service.local
+      args:
+        service: roundtable
+    ports:
+      - 3004:3004
+    links:
+      - postgres
+    environment:
+      # See https://docs.datadoghq.com/profiler/enabling/nodejs/ for DD_ specific environment variables.
+      # Note that DD_SERVICE and DD_VERSION are read by default from package.json
+      - DD_PROFILING_ENABLED=true
+      - DD_ENV=localnet_${USER}
+      - DD_AGENT_HOST=datadog-agent
+    labels:
+      com.datadoghq.ad.logs: '[{"source": "indexer", "service": "roundtable"}]'
+    depends_on:
+      kafka:
+        condition: service_healthy
+      postgres-package:
+        condition: service_completed_successfully
   # vulcan:
   #   build:
   #     context: .
