--- a/indexer/services/roundtable/.env
+++ b/indexer/services/roundtable/.env
@@ -2,13 +2,18 @@
 
 SERVICE_NAME=roundtable
 
-DB_NAME=dydx_test
-DB_USERNAME=dydx_test
-DB_PASSWORD=nemoserver123
-DB_PORT=5436
 AWS_ACCOUNT_ID=invalid-test-account-id
 AWS_REGION=invalid-test-region
 S3_BUCKET_ARN=invalid-test-bucket
 ECS_TASK_ROLE_ARN=invalid-test-arn
 KMS_KEY_ARN=invalid-kms-key-arn
 RDS_INSTANCE_NAME=invalid-rds-instance-name
+
+DB_NAME=nemo_dev
+DB_USERNAME=nemo_dev
+DB_PASSWORD=nemoserver123
+PG_POOL_MAX=2
+PG_POOL_MIN=1
+DB_HOSTNAME=postgres
+DB_READONLY_HOSTNAME=postgres
+DB_PORT=5432
