--- a/.github/workflows/indexer-reusable-build-and-run-with-pg-redis-kafka.yml
+++ b/.github/workflows/indexer-reusable-build-and-run-with-pg-redis-kafka.yml
@@ -62,5 +62,5 @@ jobs:
         run: ${{ inputs.COMMAND }}
         env:
           DB_PORT: 5432
-          REDIS_URL: redis://localhost:6379
-          RATE_LIMIT_REDIS_URL: redis://localhost:6379
+          REDIS_URL: redis://redis:6379
+          RATE_LIMIT_REDIS_URL: redis://redis:6379
