--- a/indexer/services/comlink/.env
+++ b/indexer/services/comlink/.env
@@ -2,3 +2,14 @@
 
 SERVICE_NAME=comlink
 INDEXER_LEVEL_GEOBLOCKING_ENABLED=false
+
+DB_NAME=nemo_dev
+DB_USERNAME=nemo_dev
+DB_PASSWORD=nemoserver123
+PG_POOL_MAX=2
+PG_POOL_MIN=1
+DB_HOSTNAME=postgres
+DB_READONLY_HOSTNAME=postgres
+DB_PORT=5432
+
+KAFKA_BROKER_URLS=kafka:9092
