--- a/indexer/services/ender/.env
+++ b/indexer/services/ender/.env
@@ -1,3 +1,16 @@
 # Service Level Variables
 
 SERVICE_NAME=ender
+
+INDEXER_LEVEL_GEOBLOCKING_ENABLED=false
+
+DB_NAME=nemo_dev
+DB_USERNAME=nemo_dev
+DB_PASSWORD=nemoserver123
+PG_POOL_MAX=2
+PG_POOL_MIN=1
+DB_HOSTNAME=postgres
+DB_READONLY_HOSTNAME=postgres
+DB_PORT=5432
+
+KAFKA_BROKER_URLS=kafka:9092
