--- a/indexer/services/socks/.env.development
+++ b/indexer/services/socks/.env.development
@@ -1,3 +1,10 @@
+SERVICE_NAME=socks
+
+WS_HEARTBEAT_INTERVAL_MS=30000
+WS_HEARTBEAT_TIMEOUT_MS=10000
+KAFKA_ENABLE_UNIQUE_CONSUMER_GROUP_IDS=true
+INDEXER_LEVEL_GEOBLOCKING_ENABLED=false
+
 DB_NAME=nemo_dev
 DB_USERNAME=nemo_dev
 DB_PASSWORD=nemoserver123
