--- a/indexer/services/comlink/.env.development
+++ b/indexer/services/comlink/.env.development
@@ -4,3 +4,4 @@ DB_PASSWORD=nemoserver123
 DB_HOSTNAME=postgres
 DB_READONLY_HOSTNAME=postgres
 DB_PORT=5432
+TENDERMINT_WS_URL=ws://34.138.56.239:26657/websocket
