--- a/indexer/services/comlink/.env.development
+++ b/indexer/services/comlink/.env.development
@@ -1,7 +1,15 @@
+
+SERVICE_NAME=comlink
+INDEXER_LEVEL_GEOBLOCKING_ENABLED=false
+
 DB_NAME=nemo_dev
 DB_USERNAME=nemo_dev
 DB_PASSWORD=nemoserver123
+PG_POOL_MAX=2
+PG_POOL_MIN=1
 DB_HOSTNAME=postgres
 DB_READONLY_HOSTNAME=postgres
 DB_PORT=5432
-TENDERMINT_WS_URL=ws://34.138.56.239:26657/websocket
+
+KAFKA_BROKER_URLS=kafka:9092
+TENDERMINT_WS_URL=ws://localhost:26657/websocket
