--- a/indexer/docker-compose-local-deployment.yml
+++ b/indexer/docker-compose-local-deployment.yml
@@ -4,6 +4,7 @@ services:
     image: blacktop/kafka:2.6
     ports:
       - 9092:9092
+      - 29092:29092 # External access
     environment:
       KAFKA_ADVERTISED_HOST_NAME: localhost
       KAFKA_CREATE_TOPICS:
@@ -15,9 +16,13 @@ services:
         to-websockets-markets:1:1,\
         to-websockets-candles:1:1,\
         to-websockets-block-height:1:1"
+      KAFKA_LISTENERS: INTERNAL://0.0.0.0:9092,EXTERNAL_SAME_HOST://0.0.0.0:29092
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:9092,EXTERNAL_SAME_HOST://localhost:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL_SAME_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
       DD_AGENT_HOST: datadog-agent
     healthcheck:
-      test: ["CMD-SHELL", "kafka-topics.sh --bootstrap-server localhost:9092 --topic to-websockets-candles --describe"]
+      test: ["CMD-SHELL", "kafka-topics.sh --bootstrap-server 127.0.0.1:9092 --topic to-websockets-candles --describe"]
       interval: 5s
       timeout: 20s
       retries: 50
