--- a/indexer/services/socks/.env
+++ b/indexer/services/socks/.env
@@ -4,3 +4,4 @@ WS_HEARTBEAT_INTERVAL_MS=30000
 WS_HEARTBEAT_TIMEOUT_MS=10000
 KAFKA_ENABLE_UNIQUE_CONSUMER_GROUP_IDS=true
 INDEXER_LEVEL_GEOBLOCKING_ENABLED=false
+CORS_ORIGIN=*
